turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:17: error: type mismatch;
 found   : Char('R')
 required: Array[Int]
    case 'R' => right()
         ^Turmite:18: error: type mismatch;
 found   : Char('L')
 required: Array[Int]
    case 'L' => left()
         ^